--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
 $c-gray: #eee;
+$iconMinWidth: 18px;
+$iconMaxWidth: 24px;
+$headerPaddingTop: 24px;
+$colorBlue: #0075ff;
+$footerPaddingBott: 24px;
+$whiteColor: #fff;
+$colorElseBlue: #005ecc;
+$colorGray: #3e3e3e;
+$colortitle: #9fadc2;
+$inputColor: #f7f8ff;
