--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
 @import "utils";
-@import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/top-action.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/about.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/place.scss";
+@import "./blocks/button.scss";
+@import "./blocks/testimonials.scss";
+@import "./blocks/link.scss";
+@import "./blocks/contact-us.scss";
+@import "./blocks/form-field.scss";
+@import "./blocks/footer.scss";
